Add a wrapper to English page

--- a/Patrija.Web/Views/EnglishPage.cshtml
+++ b/Patrija.Web/Views/EnglishPage.cshtml
@@ -7,5 +7,5 @@
 
 @if (!string.IsNullOrWhiteSpace(Model.Text.ToString()))
 {
-    <div class="something">@Model.Text</div>
+    <div class="wrap wrap--normal">@Model.Text</div>
 }
