--- a/html/src/scss/modules/_faq.scss
+++ b/html/src/scss/modules/_faq.scss
@@ -92,6 +92,14 @@
 	p {
 		font-size: 18px;
 		line-height: 30px;
+		@include breakpoint(laptop) {
+			font-size: 16px;
+			line-height: 28px;
+		}
+		@include mq-down(md) {
+			font-size: 14px;
+			line-height: 22px;
+		}
 		&:last-child {
 			margin-bottom: 0;
 		}
