--- a/html/src/scss/modules/_page-intro.scss
+++ b/html/src/scss/modules/_page-intro.scss
@@ -55,6 +55,10 @@
 	align-items: center;
 }
 
+.page-intro__content-align {
+	width: 100%;
+}
+
 .page-intro__date {
 	font-weight: 400;
 	margin-bottom: 10px;
