--- a/html/src/scss/modules/_gallery.scss
+++ b/html/src/scss/modules/_gallery.scss
@@ -2,12 +2,9 @@
 //------------------------------------------------------------------------------
 
 .gallery {
-	margin-bottom: -42px;
-	@include mq-only(lg) {
-		margin-bottom: 40px;
-	}
+	padding: 50px 0;
 	@include mq-only(md) {
-		margin-bottom: 80px;
+		padding-bottom: 80px;
 	}
 }
 
@@ -70,12 +67,6 @@
 	padding-bottom: 66%;
 	border-radius: 15px;
 	margin-bottom: 28px;
-	.loaded & {
-		transition: $duration $ease;
-	}
-	@include hover {
-		box-shadow: 0 10px 16px rgba($black, 0.16);
-	}
 	@include mq-down(sm) {
 		margin-bottom: 68px;
 	}
