Update partials- remove ; character

--- a/Patrija.Web/Views/Partials/NestedContent/_TestimonialsContainer.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_TestimonialsContainer.cshtml
@@ -8,7 +8,7 @@
                 <div class="testimonials__slider js-testimonials-slider">
                     @foreach (var testimonial in Model.Testimonials)
                     {
-                        @Html.Partial("TestimonialItem", testimonial);
+                        @Html.Partial("TestimonialItem", testimonial)
                     }
                 </div>
             </div>
