--- a/Patrija.Web/Views/Shared/DisplayTemplates/SimpleFormViewModel.cshtml
+++ b/Patrija.Web/Views/Shared/DisplayTemplates/SimpleFormViewModel.cshtml
@@ -5,4 +5,4 @@
     ViewData["formId"] = "seller-form";
 }
 
-@Html.Partial("~/Views/Partials/Shared/_SimpleForm.cshtml", Model);
+@Html.Partial("~/Views/Partials/Shared/_SimpleForm.cshtml", Model)
