--- a/Patrija.Web/Views/Shared/DisplayTemplates/ImageWithTextProjectPageViewModel.cshtml
+++ b/Patrija.Web/Views/Shared/DisplayTemplates/ImageWithTextProjectPageViewModel.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Patrija.Core.ViewModels.Partials.Features;
 @model ImageWithTextProjectPageViewModel
 
-@Html.Partial("~/Views/Partials/Shared/_ImageWithTextProjectPage.cshtml", Model);
+@Html.Partial("~/Views/Partials/Shared/_ImageWithTextProjectPage.cshtml", Model)
