--- a/html/src/scss/modules/_contact-form.scss
+++ b/html/src/scss/modules/_contact-form.scss
@@ -56,7 +56,7 @@
 		width: 100%;
 	}
 	.btn--submit {
-		@include mq-down(md) {
+		@include mq-down(sm) {
 			margin: 20px 0 0;
 			width: auto;
 		}
