--- a/html/src/scss/modules/_faq.scss
+++ b/html/src/scss/modules/_faq.scss
@@ -96,7 +96,7 @@
 			font-size: 16px;
 			line-height: 28px;
 		}
-		@include mq-down(md) {
+		@include mq-down(sm) {
 			font-size: 14px;
 			line-height: 22px;
 		}
