--- a/html/src/scss/modules/_member-form.scss
+++ b/html/src/scss/modules/_member-form.scss
@@ -19,14 +19,16 @@
 		flex-direction: column;
 		align-items: center;
 	}
+	@include mq-down(sm) {
+		padding: 0 10px;
+	}
 }
 
 .member-form__column {
-	flex: 1 1 50%;
+	width: 100%;
 	max-width: 44%;
 	padding: 28px 0;
 	@include mq-down(md) {
-		flex: 1 1 100%;
 		max-width: 100%;
 	}
 }
