--- a/html/src/scss/modules/_news-details.scss
+++ b/html/src/scss/modules/_news-details.scss
@@ -165,6 +165,7 @@
 		width: calc(100% - 248px);
 		@include mq-down(sm) {
 			margin-left: 0;
+			width: auto;
 		}
 	}
 	.form__error-message {
@@ -173,7 +174,15 @@
 			padding: 5px 0 0 18px;
 		}
 	}
-
+	.form__message-success {
+		padding-left: 266px;
+		@include mq-down(md) {
+			padding-left: 265px;
+		}
+		@include mq-down(sm) {
+			padding-left: 16px;
+		}
+	}
 }
 
 .news-details__comments-heading {
