--- a/html/src/scss/modules/_page-intro.scss
+++ b/html/src/scss/modules/_page-intro.scss
@@ -2,7 +2,7 @@
 //------------------------------------------------------------------------------
 
 .page-intro {
-	height: 720px;
+	min-height: 720px;
 	margin-bottom: 130px;
 	.wrap {
 		height: 100%;
@@ -16,18 +16,18 @@
 		left: -15.1%;
 	}
 	@include breakpoint(laptop) {
-		height: 600px;
+		min-height: 600px;
 		margin-bottom: 20px;
 	}
 	@include mq-between(md, lg) {
-		height: 550px;
+		min-height: 550px;
 		margin-bottom: 20px;
 	}
 	@include mq-only(md) {
-		height: 400px;
+		min-height: 400px;
 	}
 	@include mq-down(sm) {
-		height: auto;
+		min-height: 0;
 		margin-bottom: 20px;
 	}
 }
