If widgets aren't added to a blog page, the content shouldn't spread

--- a/html/src/scss/modules/_contact-map.scss
+++ b/html/src/scss/modules/_contact-map.scss
@@ -88,6 +88,12 @@
 		background-repeat: no-repeat;
 		background-size: cover;
 		pointer-events: none;
+		@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) { // sass-lint:disable-line no-vendor-prefixes
+			width: 100%;
+		}
+		@include mq-down(md) {
+			left: -1px;
+		}
 	}
 	iframe {
 		position: absolute;
